--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: Arial;
     border: border-box;
 }
-.navbar{
+
+.navbar {
     height: 7vh;
     background-color: #0f1111;
     color: white;
@@ -12,52 +13,62 @@
     align-items: center;
     justify-content: space-evenly;
 }
-.nav-logo{
+
+.nav-logo {
     height: 48px;
     width: 100px;
     margin-left: 5px;
 }
-.logo{
+
+.logo {
     background-image: url("amazon_logo.png");
     height: 50px;
     width: 100%;
     background-size: cover;
 }
-.border{
+
+.border {
     border: 1.5px solid transparent;
 }
-.border:hover{
+
+.border:hover {
     border: 1.5px solid white;
 }
+
 /* box-2 */
-.add-first{
+.add-first {
     color: #cccccc;
     font-size: 0.85rem;
     margin-left: 1.5rem;
 }
-.add-second{
+
+.add-second {
     font-size: 1rem;
     padding-left: 3px;
-    
+
 }
-.add-icon{
+
+.add-icon {
     display: flex;
     align-items: center;
     margin-left: 1.5rem;
-    
+
 }
+
 /* box-3 */
 
-.nav-search{
+.nav-search {
     display: flex;
     height: 4.5vh;
     margin-left: 3%;
     border-radius: 5px;
 }
-.search-input:hover{
+
+.search-input:hover {
     border: 2px solid rgb(179, 124, 6);
 }
-.search-input{
+
+.search-input {
     width: 50vw;
     height: 4.vh;
     display: flex;
@@ -68,7 +79,8 @@
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
 }
-.search-icon{
+
+.search-icon {
     background-color: rgb(179, 124, 6);
     align-items: center;
     display: flex;
@@ -79,43 +91,128 @@
     height: 4.5vh;
     border: none;
 }
-.search-select{
+
+.search-select {
     border-radius: 5px;
     background-color: #0f1112;
     color: white;
     border: none;
 }
-.search-icon:hover{
+
+.search-icon:hover {
     background-color: rgb(130, 90, 2);
 }
-.flag{
+
+.flag {
     margin-left: 1rem;
     font-size: 20px;
     display: flex;
     align-items: center;
-    
+
 }
-.english{
+
+.english {
     margin-left: 0.5rem;
     display: flex;
     align-items: center;
     font-weight: bold;
 }
+
 /* box-4 */
-span{
-   font-size: 1rem ; 
+span {
+    font-size: 1rem;
 }
-.nav-second{
+
+.nav-second {
     font-size: 1.2rem;
     font-weight: 700;
 }
 
 /* box-5 */
-.cart i{
+.cart i {
     font-size: 30px;
-    
+
 }
-.cart{
-    font-size: 1.2em ;
+
+.cart {
+    font-size: 1.2em;
     font-weight: 700;
 }
+
+/* panel */
+
+.panel {
+    height: 4.5vh;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.panel-options p {
+    display: inline;
+    margin-left: 13px;
+    font-weight: 550;
+    padding: 10px;
+}
+
+.panel-options {
+    width: 70%;
+    font-size: 0.9rem;
+
+}
+
+.panel-deals {
+    font-size: 1rem;
+    font-weight: 750;
+}
+
+.panel-all {
+    margin-left: 15px;
+
+}
+
+.panel-options p:hover {
+    border: 2px solid grey;
+}
+
+.panel-deals {
+    margin-right: 1%;
+}
+
+/* hero section */
+
+.hero-section {
+    background-image: url("heroimg.jpg");
+    height: 60vh;
+    width: auto;
+
+}
+
+/* shop-section */
+
+.box {
+    height: 52vh;
+    border: none;
+    width: 20vw;
+    background-color: white;
+    display:flexbox;
+    flex-wrap: wrap;
+    margin-top: 2%;
+    margin-bottom: 2px;
+}
+
+.shop-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background: linear-gradient(0.25turn, #a88dad, #9bb98854, rgb(181, 173, 129));
+
+}
+
+.box img{
+    height: 100%;
+    width: 100%;
+    margin: 5px 0px;
+} 
